--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1,10 +1,10 @@
 
-$base: #a425d6
-$secondary: #232fd8
-$tetiary: #e22fe2
-$text-white: #f3f3f3
-$text-gray: #cecece
-$text-black: #111
+$base: #6b16cc
+$secondary: #143bd8
+$tetiary: #ce16b5
+$text-white: #f5f5f5
+$text-gray: #bdbdbd
+$text-black: #0c0c0c
 $light-tetiary: lighten($tetiary, 15)
 $transition-color: background-color 100ms ease-in, color 100ms ease-in
 $transition-size: width 300ms ease-in-out, height 300ms ease-in-out
