--- a/src/styles/about-page.sass
+++ b/src/styles/about-page.sass
@@ -13,6 +13,8 @@ div.about-card
     padding: 1rem
     border: 2px solid base.$secondary
     box-shadow: 0 0 15px 0 #1112
+    -webkit-backdrop-filter: blur(2px)
+    backdrop-filter: blur(2px)
     margin: 1rem
     margin-top: 3rem
     border-radius: 10px
