--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins&display=swap')
 *
   margin: 0
   padding: 0
   box-sizing: border-box
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: 'Fredoka', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
 h1, h2, h3, h4, h5 
   text-align: inherit
