--- a/src/styles/landing-page.sass
+++ b/src/styles/landing-page.sass
@@ -29,9 +29,10 @@ $spacing-sm: 1.75rem
         height: 3rem
         color: base.$base
         display: flex
-        opacity: 0.85
-        box-shadow: 0 3px 5px 0 #000000a6
+        opacity: 0.8
+        box-shadow: 0 3px 4px 0 #000000a6
         transition: all 0.2s ease-in
+        backdrop-filter: blur(2px)
         &:hover
             opacity: 1
             padding: 0.5rem
