--- a/src/styles/navbar.sass
+++ b/src/styles/navbar.sass
@@ -10,7 +10,7 @@ nav
     box-shadow: 0 0 10px 0 #00000057
     margin-bottom: 0.75rem
     position: sticky
-    top: 0
+    top: -1px
     background-color: lighten(base.$secondary, 55)
     z-index: 100
     margin-bottom: 5px
