--- a/src/styles/about-page.sass
+++ b/src/styles/about-page.sass
@@ -1,5 +1,5 @@
 @use 'mixins'
-@use 'defs'
+@use 'colors'
 
 div.about-page
     section
@@ -12,6 +12,7 @@ div.about-page
             font-size: 1.1rem
             text-align: justify
     padding: 1rem
+    line-height: 1.5
 
     span.emphasis
         @include mixins.emphasis(#862ff7)
