--- a/src/styles/landing-page.sass
+++ b/src/styles/landing-page.sass
@@ -1,5 +1,5 @@
 @use 'mixins'
-@use 'defs' as base
+@use 'colors'
 
 $spacing: 2.5rem
 $spacing-sm: 1.75rem
@@ -8,7 +8,7 @@ $spacing-sm: 1.75rem
     width: 100%
     height: 100vh
     position: relative
-    background: linear-gradient(35deg, lighten(base.$base, 6), lighten(base.$secondary, 4))
+    background: linear-gradient(35deg, lighten(colors.$base, 6), lighten(colors.$secondary, 4))
     display: flex
     flex-direction: column
     @include mixins.lg-screens(flex-direction, row)
@@ -22,12 +22,12 @@ $spacing-sm: 1.75rem
         bottom: 1vh
         right: 1.2vw
         background: #fff
-        border: 2px solid transparentize(base.$base, 0.1)
+        border: 2px solid transparentize(colors.$base, 0.1)
         padding: 0.7rem
         border-radius: 50%
         width: 3rem
         height: 3rem
-        color: base.$base
+        color: colors.$base
         display: flex
         opacity: 0.8
         box-shadow: 0 3px 4px 0 #000000a6
@@ -58,8 +58,8 @@ $spacing-sm: 1.75rem
             color: #000000
             opacity: 0.2
             transform-style: preserve-3d
-            height: 350px
-            width:  350px
+            height: 300px
+            width:  300px
         
 
     & > div.inner // Inner div
@@ -84,14 +84,14 @@ $spacing-sm: 1.75rem
             @include mixins.lg-screens(text-align, left)
             h1
                 font-size: 3.75rem
-                color: base.$text-white
+                color: colors.$text-white
                 margin-bottom: 1rem
 
                 @include mixins.lg-screens(font-size, 4.4rem)
             div 
                 transition: all 0.5s ease-in
                 &>span
-                    color: base.$text-gray
+                    color: colors.$text-gray
                     font-size: 1.35rem
                     font-weight: bold
 
@@ -99,18 +99,18 @@ $spacing-sm: 1.75rem
             a
                 padding: 0.75rem 1.25rem
                 font-weight: bold
+                color: #fff
                 display: inline-block
                 font-size: 1rem
                 @include mixins.full
 
-            color: base.$text-white
-            background-color: lighten(base.$tetiary, 5)
+            background-color: lighten(colors.$tetiary, 5)
             box-shadow: 0 0 9px 0 #0c0c0c60
             margin-top: 1rem
             border-radius: 7px
 
             @include mixins.mx-auto
-            @include mixins.on-hover(background-color, lighten(base.$tetiary, 10))
+            @include mixins.on-hover(background-color, lighten(colors.$tetiary, 10))
             @include mixins.lg-screens(margin-left, $spacing)
 
     span.emphasis
