--- a/src/styles/navbar.sass
+++ b/src/styles/navbar.sass
@@ -1,7 +1,7 @@
 @use 'colors'
 @import 'mixins'
 
-nav
+nav.navigation-bar
     display: flex
     flex-direction: column
     justify-content: space-between
